--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -138,7 +138,7 @@ The position of the virtual source will be described in terms of Cartesian coord
 d_{i} = \sqrt{ {(x_{i} - x_{s})}^2 + {(y_{i} - y_{s})}^2 } \qquad \textrm{for } 1 \leq i \leq N \textrm{ .}
 \end{equation}
 
-For simplicity the source is assumed to have unity amplitude. DBAP makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. If the amplitude of the $ith$ speaker is $v_{i}$, this implies
+For simplicity the source is assumed to have unity amplitude. DBAP makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. If the amplitude of the $i$th speaker is $v_{i}$, this implies
 
 \begin{equation} \label{eq:constant_intensity}
 I = \sum_{i=1}^{N} {v_{i}}^2 = 1
