Adding a bunch of references
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4660 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,351 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-01-27 14:41:37 +0100 
+%% Created for lossius at 2009-02-08 21:04:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Bayle:1993MusiqueAcousmatique,
+	Abstract = {{This book explains the positions and propositions of French electroacoustic composer and INA-GRM director Fran{\c c}ois Bayle about the acousmatic music he contributed to define.}},
+	Author = {Bayle, Fran{\c c}ois},
+	Citeulike-Article-Id = {1036701},
+	Date-Added = {2009-02-08 21:04:50 +0100},
+	Date-Modified = {2009-02-08 21:04:50 +0100},
+	Howpublished = {Paperback},
+	Isbn = {0071360972},
+	Keywords = {acousmatic music},
+	Month = {September},
+	Priority = {2},
+	Publisher = {{Biblioth{\`e}que de recherches musicales, INA-GRM-Buchet/Chastel}},
+	Title = {Musique acousmatique, propositions{\ldots} {\ldots}positions},
+	Year = {1993},
+	Bdsk-Url-1 = {http://www.amazon.fr/exec/obidos/ASIN/0071360972/citeulike04-21}}
+
+@phdthesis{lossius:2007sound_space_body,
+	Author = {T. Lossius},
+	Date-Added = {2009-02-08 21:03:07 +0100},
+	Date-Modified = {2009-02-08 21:03:07 +0100},
+	Keywords = {spatialisation, art-based research, trond},
+	School = {Bergen National Academy of the Arts},
+	Title = {Sound Space Body: Reflections on Artistic Practice},
+	Year = {2007}}
+
+@inproceedings{Peters:2008vimic,
+	Author = {N. Peters and T. Matthews and J. Braasch and S. McAdams},
+	Booktitle = {Proceedings of the 2008 International Computer Music Conference},
+	Date-Added = {2009-02-08 21:01:52 +0100},
+	Date-Modified = {2009-02-08 21:01:52 +0100},
+	Keywords = {ViMiC, spatialisation, Jamoma},
+	Title = {{Spatial sound rendering in Max/MSP with ViMiC}},
+	Year = {2008},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHYAAAAAAHYAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScUUGV0ZXJzXzIwMDh2aW1pYy5wZGYAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAoDeMR9uqsAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADEfZ6LAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBTTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UGV0ZXJzXzIwMDh2aW1pYy5wZGYAAA4AKgAUAFAAZQB
+0AGUAcgBzAF8AMgAwADAAOAB2AGkAbQBpAGMALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAH
+MAaAAgAEgARAASAEZVc2Vycy9sb3NzaXVzL0RvY3VtZW50cy9BcnRpa2xlci9fYmliZGVza19pb
+mRleGVkL1BldGVyc18yMDA4dmltaWMucGRmABMAAS8AABUAAgAO//8AANIeHyAhWCRjbGFzc2Vz
+WiRjbGFzc25hbWWjISIjXU5TTXV0YWJsZURhdGFWTlNEYXRhWE5TT2JqZWN0XxBHLi4vLi4vLi4
+vLi4vLi4vRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4ZWQvUGV0ZXJzXzIwMDh2aW
+1pYy5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIANwA6AD8AQQBTAFwAYgBpA
+HAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5ApUCmgKjAq4CsgLAAscC0AMaAx8DIgAAAAAA
+AAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAMv}}
+
+@inproceedings{Momeni:2003hipnoscope,
+	Author = {Momeni, A and Wessel, D.},
+	Booktitle = {Proceedings of the 2003 Conference on New Interfaces for Musical Expression (NIME-03), Montreal, Canada},
+	Date-Added = {2009-02-08 20:55:56 +0100},
+	Date-Modified = {2009-02-08 20:55:56 +0100},
+	Keywords = {gestures, Max, mapping},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Momeni_2003hipnoscope.pdf},
+	Title = {Characterizing and Controlling Musical Material Intuitively with Geometric Models},
+	Year = {2003},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHsAAAAAAHsAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScZTW9tZW5pXzIwMDNoaXBub3Njb3BlLnBkZgAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNk8Hr+ilQREYgcHJ2dwAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADB6+wZAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBYTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6TW9tZW5pXzIwMDNoaXBub3Njb3BlLnBkZgAOADQAGQB
+NAG8AbQBlAG4AaQBfADIAMAAwADMAaABpAHAAbgBvAHMAYwBvAHAAZQAuAHAAZABmAA8AGgAMAE
+0AYQBjAGkAbgB0AG8AcwBoACAASABEABIAS1VzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrb
+GVyL19iaWJkZXNrX2luZGV4ZWQvTW9tZW5pXzIwMDNoaXBub3Njb3BlLnBkZgAAEwABLwAAFQAC
+AA7//wAA0h4fICFYJGNsYXNzZXNaJGNsYXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGF
+YTlNPYmplY3RfEEwuLi8uLi8uLi8uLi8uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW
+5kZXhlZC9Nb21lbmlfMjAwM2hpcG5vc2NvcGUucGRm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAE
+QAaAB8AKQAyADcAOgA/AEEAUwBcAGIAaQBwAHgAgwCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKp
+Aq4CtwLCAsYC1ALbAuQDMwM4AzsAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAADSA==}}
+
+@manual{Place:2005hipno,
+	Author = {Place, T. and Wolek, N. and Allison, J.},
+	Date-Added = {2009-02-08 20:55:44 +0100},
+	Date-Modified = {2009-02-08 20:55:44 +0100},
+	Keywords = {dsp, Max, filters, synthesis, trond},
+	Organization = {Cycling'74 and Electrotap},
+	Title = {Hipno: Getting Started},
+	Url = {http://www.cycling74.com},
+	Year = {2005},
+	Bdsk-Url-1 = {http://www.cycling74.com}}
+
+@inproceedings{lossius:2008installations,
+	Author = {Trond Lossius},
+	Booktitle = {Proceedings of the 2008 International Computer Music Conference},
+	Date-Added = {2009-02-08 20:55:13 +0100},
+	Date-Modified = {2009-02-08 20:55:13 +0100},
+	Keywords = {spatialisation, installation, SpatDIF},
+	Read = {Yes},
+	Title = {Controlling spatial sound within an installation art context},
+	Year = {2008}}
+
+@inproceedings{Peters:2008spatdif,
+	Author = {Nils Peters},
+	Booktitle = {Proceedings of the 2008 International Computer Music Conference},
+	Date-Added = {2009-02-08 20:54:53 +0100},
+	Date-Modified = {2009-02-08 20:54:53 +0100},
+	Keywords = {spatialisation, SpatDIF, Jamoma},
+	Title = {Proposing SpatDIF - The Spatial Sound Description Interchange Format},
+	Year = {2008},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHgAAAAAAHgAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScWUGV0ZXJzXzIwMDhzcGF0ZGlmLnBkZgAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGguLcWeHdUAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADFng/FAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBVTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UGV0ZXJzXzIwMDhzcGF0ZGlmLnBkZgAADgAuABYAUAB
+lAHQAZQByAHMAXwAyADAAMAA4AHMAcABhAHQAZABpAGYALgBwAGQAZgAPABoADABNAGEAYwBpAG
+4AdABvAHMAaAAgAEgARAASAEhVc2Vycy9sb3NzaXVzL0RvY3VtZW50cy9BcnRpa2xlci9fYmliZ
+GVza19pbmRleGVkL1BldGVyc18yMDA4c3BhdGRpZi5wZGYAEwABLwAAFQACAA7//wAA0h4fICFY
+JGNsYXNzZXNaJGNsYXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNPYmplY3RfEEk
+uLi8uLi8uLi8uLi8uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW5kZXhlZC9QZXRlcn
+NfMjAwOHNwYXRkaWYucGRm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAEQAaAB8AKQAyADcAOgA/A
+EEAUwBcAGIAaQBwAHgAgwCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKdAqICqwK2AroCyALPAtgD
+JAMpAywAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAADOQ==}}
+
+@inproceedings{Place:2008osc_properties,
+	Author = {Timothy Place and Trond Lossius and Alexander Refsum Jensenius and Nils Peters and Pascal Baltazare},
+	Booktitle = {Proceedings of the 2008 Conference on New Interfaces for Musical Expression (NIME-08), Genova, Italy},
+	Date-Added = {2009-02-08 20:54:37 +0100},
+	Date-Modified = {2009-02-08 20:54:37 +0100},
+	Keywords = {Jamoma, Max, osc},
+	Title = {Addressing Classes by Differentiating Values and Properties in OSC},
+	Year = {2008}}
+
+@inproceedings{Place:2006jamoma,
+	Author = {Place, T. and T. Lossius},
+	Booktitle = {Proceedings of the 2006 International Computer Music Conference},
+	Date-Added = {2009-02-08 20:54:27 +0100},
+	Date-Modified = {2009-02-08 20:54:27 +0100},
+	Keywords = {Max, trond, gestures, MIDI, OSC, Jamoma},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Place_2006jamoma.pdf},
+	Publisher = {New Orleans: International Computer Music Association},
+	Title = {Jamoma: A modular standard for structuring patches in Max},
+	Year = {2006},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHYAAAAAAHYAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScUUGxhY2VfMjAwNmphbW9tYS5wZGYAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNn8DVpxxQREYgcHJ2dwAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADA1Yr8AAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBTTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UGxhY2VfMjAwNmphbW9tYS5wZGYAAA4AKgAUAFAAbAB
+hAGMAZQBfADIAMAAwADYAagBhAG0AbwBtAGEALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAH
+MAaAAgAEgARAASAEZVc2Vycy9sb3NzaXVzL0RvY3VtZW50cy9BcnRpa2xlci9fYmliZGVza19pb
+mRleGVkL1BsYWNlXzIwMDZqYW1vbWEucGRmABMAAS8AABUAAgAO//8AANIeHyAhWCRjbGFzc2Vz
+WiRjbGFzc25hbWWjISIjXU5TTXV0YWJsZURhdGFWTlNEYXRhWE5TT2JqZWN0XxBHLi4vLi4vLi4
+vLi4vLi4vRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4ZWQvUGxhY2VfMjAwNmphbW
+9tYS5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIANwA6AD8AQQBTAFwAYgBpA
+HAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5ApUCmgKjAq4CsgLAAscC0AMaAx8DIgAAAAAA
+AAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAMv}}
+
+@inproceedings{Schacher:2006ambi_max,
+	Abstract = {Ambisonics is an effective way of describing and projecting 
+spatial sound. Based on the theoretical works of the late 
+Michael Gerzon, it is more and more frequently being used 
+not only to reproduce recordings made with a soundfield 
+microphone and encoded in the corresponding B-format but 
+also to place virtual sources in a periphonic space and 
+decode them to an arbitrary number and configuration of 
+speakers. The tools developed at the ICST implement 
+Ambisonics in the form of Max/MSP externals and allow the 
+encoding and decoding in three dimensions of up to third- 
+order Ambisonics. In addition they include a graphical 
+control module for real-time manipulation of source 
+placement and modules for algorithmic control of source 
+motion in three-dimensional space. },
+	Annote = {Ambisonics is an effective way of describing and projecting 
+spatial sound. Based on the theoretical works of the late 
+Michael Gerzon, it is more and more frequently being used 
+not only to reproduce recordings made with a soundfield 
+microphone and encoded in the corresponding B-format but 
+also to place virtual sources in a periphonic space and 
+decode them to an arbitrary number and configuration of 
+speakers. The tools developed at the ICST implement 
+Ambisonics in the form of Max/MSP externals and allow the 
+encoding and decoding in three dimensions of up to third- 
+order Ambisonics. In addition they include a graphical 
+control module for real-time manipulation of source 
+placement and modules for algorithmic control of source 
+motion in three-dimensional space. 
+},
+	Author = {J. C. Schacher and P. Kocher},
+	Booktitle = {Proceedings of the 2006 International Computer Music Conference},
+	Date-Added = {2009-02-08 20:52:24 +0100},
+	Date-Modified = {2009-02-08 20:52:24 +0100},
+	Keywords = {ambisonics, spatialisation, Max},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Schacher_2006ambi_max.pdf},
+	Title = {Ambisonics Spatialization Tools for Max/MSP},
+	Year = {2006},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHsAAAAAAHsAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScZU2NoYWNoZXJfMjAwNmFtYmlfbWF4LnBkZgAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNscHtBYZQREYgcHJ2dwAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADB7Pd2AAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBYTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6U2NoYWNoZXJfMjAwNmFtYmlfbWF4LnBkZgAOADQAGQB
+TAGMAaABhAGMAaABlAHIAXwAyADAAMAA2AGEAbQBiAGkAXwBtAGEAeAAuAHAAZABmAA8AGgAMAE
+0AYQBjAGkAbgB0AG8AcwBoACAASABEABIAS1VzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrb
+GVyL19iaWJkZXNrX2luZGV4ZWQvU2NoYWNoZXJfMjAwNmFtYmlfbWF4LnBkZgAAEwABLwAAFQAC
+AA7//wAA0h4fICFYJGNsYXNzZXNaJGNsYXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGF
+YTlNPYmplY3RfEEwuLi8uLi8uLi8uLi8uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW
+5kZXhlZC9TY2hhY2hlcl8yMDA2YW1iaV9tYXgucGRm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAE
+QAaAB8AKQAyADcAOgA/AEEAUwBcAGIAaQBwAHgAgwCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKp
+Aq4CtwLCAsYC1ALbAuQDMwM4AzsAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAADSA==}}
+
+@article{Pulkki:1997vbap,
+	Author = {Pulkki, V.},
+	Date-Added = {2009-02-08 20:51:58 +0100},
+	Date-Modified = {2009-02-08 20:51:58 +0100},
+	Journal = {Journal of the Audio Engineering Society},
+	Keywords = {spatialisation, vbap},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_1997vbap.pdf},
+	Month = {June},
+	Pages = {456-466},
+	Title = {Virtual sound source positioning using vector base amplitude panning},
+	Url = {http://lib.tkk.fi/Diss/2001/isbn9512255324/},
+	Volume = {45(6)},
+	Year = {1997},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHUAAAAAAHUAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScTUHVsa2tpXzE5OTd2YmFwLnBkZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNpMBtQiQAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADAbSYEAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBSTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UHVsa2tpXzE5OTd2YmFwLnBkZgAOACgAEwBQAHUAbAB
+rAGsAaQBfADEAOQA5ADcAdgBiAGEAcAAuAHAAZABmAA8AGgAMAE0AYQBjAGkAbgB0AG8AcwBoAC
+AASABEABIARVVzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4Z
+WQvUHVsa2tpXzE5OTd2YmFwLnBkZgAAEwABLwAAFQACAA7//wAA0h4fICFYJGNsYXNzZXNaJGNs
+YXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNPYmplY3RfEEYuLi8uLi8uLi8uLi8
+uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW5kZXhlZC9QdWxra2lfMTk5N3ZiYXAucG
+Rm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAEQAaAB8AKQAyADcAOgA/AEEAUwBcAGIAaQBwAHgAg
+wCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKRApYCnwKqAq4CvALDAswDFQMaAx0AAAAAAAACAQAA
+AAAAAAAoAAAAAAAAAAAAAAAAAAADKg==},
+	Bdsk-Url-1 = {http://lib.tkk.fi/Diss/2001/isbn9512255324/}}
+
+@inproceedings{Pulkki:1999vbap,
+	Author = {Pulkki, V.},
+	Booktitle = {Proceedings of the 1999 IEEE Workshop on Applications of Signal Processing to Audio and Acoustics. Mohonk Mountain House, New Paltz, New York.},
+	Date-Added = {2009-02-08 20:50:39 +0100},
+	Date-Modified = {2009-02-08 20:50:39 +0100},
+	Keywords = {spatialisation, vbap},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_1999vbap.pdf},
+	Title = {Uniform spreading of amplitude panned virtual sources},
+	Url = {http://lib.tkk.fi/Diss/2001/isbn9512255324/},
+	Year = {1999},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHUAAAAAAHUAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScTUHVsa2tpXzE5OTl2YmFwLnBkZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNpcBtQjgAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADAbSYYAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBSTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UHVsa2tpXzE5OTl2YmFwLnBkZgAOACgAEwBQAHUAbAB
+rAGsAaQBfADEAOQA5ADkAdgBiAGEAcAAuAHAAZABmAA8AGgAMAE0AYQBjAGkAbgB0AG8AcwBoAC
+AASABEABIARVVzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4Z
+WQvUHVsa2tpXzE5OTl2YmFwLnBkZgAAEwABLwAAFQACAA7//wAA0h4fICFYJGNsYXNzZXNaJGNs
+YXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNPYmplY3RfEEYuLi8uLi8uLi8uLi8
+uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW5kZXhlZC9QdWxra2lfMTk5OXZiYXAucG
+Rm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAEQAaAB8AKQAyADcAOgA/AEEAUwBcAGIAaQBwAHgAg
+wCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKRApYCnwKqAq4CvALDAswDFQMaAx0AAAAAAAACAQAA
+AAAAAAAoAAAAAAAAAAAAAAAAAAADKg==},
+	Bdsk-Url-1 = {http://lib.tkk.fi/Diss/2001/isbn9512255324/}}
+
+@inproceedings{Pulkki:2000vbap_max,
+	Author = {Pulkki, V.},
+	Booktitle = {Proceedings of International Computer Music Conference 2000. Berlin, Germany, August, 2000.},
+	Date-Added = {2009-02-08 20:49:31 +0100},
+	Date-Modified = {2009-02-08 20:49:31 +0100},
+	Keywords = {spatialisation, vbap, Max},
+	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_2000vbap_max.pdf},
+	Pages = {304-307},
+	Rating = {5},
+	Read = {Yes},
+	Title = {Generic panning tools for MAX/MSP.},
+	Url = {http://lib.tkk.fi/Diss/2001/isbn9512255324/},
+	Year = {2000},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHkAAAAAAHkAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScXUHVsa2tpXzIwMDB2YmFwX21heC5wZGYAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsNp8BtQk8AAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADAbSYvAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBWTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UHVsa2tpXzIwMDB2YmFwX21heC5wZGYADgAwABcAUAB
+1AGwAawBrAGkAXwAyADAAMAAwAHYAYgBhAHAAXwBtAGEAeAAuAHAAZABmAA8AGgAMAE0AYQBjAG
+kAbgB0AG8AcwBoACAASABEABIASVVzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrbGVyL19ia
+WJkZXNrX2luZGV4ZWQvUHVsa2tpXzIwMDB2YmFwX21heC5wZGYAABMAAS8AABUAAgAO//8AANIe
+HyAhWCRjbGFzc2VzWiRjbGFzc25hbWWjISIjXU5TTXV0YWJsZURhdGFWTlNEYXRhWE5TT2JqZWN
+0XxBKLi4vLi4vLi4vLi4vLi4vRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4ZWQvUH
+Vsa2tpXzIwMDB2YmFwX21heC5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIAN
+wA6AD8AQQBTAFwAYgBpAHAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5AqECpgKvAroCvgLM
+AtMC3AMpAy4DMQAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAM+},
+	Bdsk-Url-1 = {http://lib.tkk.fi/Diss/2001/isbn9512255324/}}
+
+@inproceedings{Neukom:2008ambipan,
+	Abstract = {In Ambisonics sound is encoded and stored in multichannel sound files and is decoded for playback. In the en- and decoding process complicated functions are used. In this paper panning functions equivalent to the result of en- and decoding are presented which can be used for real-time panning in an arbitrary high ambisonic order. In the function equivalent to the socalled in-phase decoding the order of ambisonic resolution is just a variable that can be any positive number not restricted to integers and that can be changed during playback. The limitations and advantages of the technique are mentioned, real time applications are described and the computational costs are estimated. The described procedure offers a new intuitive understanding of Ambisonics.
+},
+	Author = {Martin Neukom and Jan Schacher},
+	Booktitle = {Proceedings of the 2008 International Computer Music Conference},
+	Date-Added = {2009-02-08 20:48:31 +0100},
+	Date-Modified = {2009-02-08 20:48:31 +0100},
+	Keywords = {ambisonics, Max},
+	Title = {Ambisonics equivalent panning},
+	Year = {2008},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQHgAAAAAAHgAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScWTmV1a29tXzIwMDhhbWJpcGFuLnBkZgAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG78scP8bEIAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADD/F4yAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBVTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6TmV1a29tXzIwMDhhbWJpcGFuLnBkZgAADgAuABYATgB
+lAHUAawBvAG0AXwAyADAAMAA4AGEAbQBiAGkAcABhAG4ALgBwAGQAZgAPABoADABNAGEAYwBpAG
+4AdABvAHMAaAAgAEgARAASAEhVc2Vycy9sb3NzaXVzL0RvY3VtZW50cy9BcnRpa2xlci9fYmliZ
+GVza19pbmRleGVkL05ldWtvbV8yMDA4YW1iaXBhbi5wZGYAEwABLwAAFQACAA7//wAA0h4fICFY
+JGNsYXNzZXNaJGNsYXNzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNPYmplY3RfEEk
+uLi8uLi8uLi8uLi8uLi9Eb2N1bWVudHMvQXJ0aWtsZXIvX2JpYmRlc2tfaW5kZXhlZC9OZXVrb2
+1fMjAwOGFtYmlwYW4ucGRm0h4fJieiJyNcTlNEaWN0aW9uYXJ5AAgAEQAaAB8AKQAyADcAOgA/A
+EEAUwBcAGIAaQBwAHgAgwCFAIgAigCMAI8AkQCTAJ0AqgCvALcAuQKdAqICqwK2AroCyALPAtgD
+JAMpAywAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAADOQ==}}
 
 @book{Everest:2000handbook_acoustics,
 	Abstract = {{The goal of this book is to apply the principles of acoustics to the audio arts. This involves serving as an interpreter of major trends and the literature for students and practitioners in the audio field. Along with covering the more theoretical aspects of acoustics, the book applies the theory to the design of specialized audio spaces such as the home listening room, the control room, and the multi-track-recording studio.}},
@@ -24,19 +363,3 @@
 	Title = {Master Handbook of Acoustics. 4th edition.},
 	Year = {2000},
 	Bdsk-Url-1 = {http://www.amazon.fr/exec/obidos/ASIN/0071360972/citeulike04-21}}
-
-@inproceedings{Author:00,
-	Address = {Miami, USA},
-	Author = {Author, E.},
-	Booktitle = {Proceedings of the International Computer Music Conference},
-	Pages = {11-45678},
-	Title = {The title of the conference paper},
-	Year = {2004}}
-
-@book{Someone:02,
-	Address = {Belfast},
-	Author = {Someone, A.},
-	Month = {January},
-	Publisher = {Publisher},
-	Title = {Title of the book},
-	Year = {2007}}
