Adding another bunch of references
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4661 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,56 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-08 21:04:51 +0100 
+%% Created for lossius at 2009-02-08 21:22:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Prager:2002acousmatique,
+	Author = {Jonathan Prager},
+	Date-Added = {2009-02-08 21:12:11 +0100},
+	Date-Modified = {2009-02-08 21:21:40 +0100},
+	Institution = {Motus},
+	Keywords = {acousmatic},
+	Title = {Introduction a l'interpretation acousmatique},
+	Year = {2002},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQH0AAAAAAH0AAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScbUHJhZ2VyXzIwMDJhY291c21hdGlxdWUucGRmAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG7/L8W0+zoAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADFtO0qAAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBaTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6UHJhZ2VyXzIwMDJhY291c21hdGlxdWUucGRmAA4AOAA
+bAFAAcgBhAGcAZQByAF8AMgAwADAAMgBhAGMAbwB1AHMAbQBhAHQAaQBxAHUAZQAuAHAAZABmAA
+8AGgAMAE0AYQBjAGkAbgB0AG8AcwBoACAASABEABIATVVzZXJzL2xvc3NpdXMvRG9jdW1lbnRzL
+0FydGlrbGVyL19iaWJkZXNrX2luZGV4ZWQvUHJhZ2VyXzIwMDJhY291c21hdGlxdWUucGRmAAAT
+AAEvAAAVAAIADv//AADSHh8gIVgkY2xhc3Nlc1okY2xhc3NuYW1loyEiI11OU011dGFibGVEYXR
+hVk5TRGF0YVhOU09iamVjdF8QTi4uLy4uLy4uLy4uLy4uL0RvY3VtZW50cy9BcnRpa2xlci9fYm
+liZGVza19pbmRleGVkL1ByYWdlcl8yMDAyYWNvdXNtYXRpcXVlLnBkZtIeHyYnoicjXE5TRGljd
+GlvbmFyeQAIABEAGgAfACkAMgA3ADoAPwBBAFMAXABiAGkAcAB4AIMAhQCIAIoAjACPAJEAkwCd
+AKoArwC3ALkCsQK2Ar8CygLOAtwC4wLsAz0DQgNFAAAAAAAAAgEAAAAAAAAAKAAAAAAAAAAAAAA
+AAAAAA1I=}}
+
+@book{Rumsey:2001spatial_audio,
+	Abstract = {{Explores the principles and practical considerations of spatial sound recording and reproduction. Particular emphasis is given to the increasing importance of multichannel surround sound and 3D audio, including binaural approaches, without ignoring conventional stereo.<br><br>  The enhancement of spatial quality is arguably the only remaining hurdle to be overcome in pursuit of high quality sound reproduction. The rise of increasingly sophisticated spatial sound systems presents an enormous challenge to audio engineers, many of whom are confused by the possibilities and unfamiliar with standards, formats, track allocations, monitoring configurations and recording techniques. <br><br>The author provides a comprehensive study of the current state of the art in spatial audio, concentrating on the most widely used approaches and configurations. Anyone wishing to expand their understanding of these cutting-edge technologies will want to own this book.<br><br>Keep up to date with the latest technology - 3D audio, surround sound and multichannel recording techniques<br>Enables you to cut through the common confusions and problems associated with the subject<br>Further your knowledge with this comprehensive study of the very latest spatial audio technologies and techniques}},
+	Author = {Rumsey, Francis},
+	Citeulike-Article-Id = {227605},
+	Date-Added = {2009-02-08 21:07:28 +0100},
+	Date-Modified = {2009-02-08 21:07:28 +0100},
+	Howpublished = {Paperback},
+	Isbn = {0240516230},
+	Keywords = {spatialisation},
+	Month = {June},
+	Priority = {3},
+	Publisher = {{Focal Press, Oxford and Boston}},
+	Title = {{Spatial Audio}},
+	Url = {http://www.amazon.co.uk/exec/obidos/ASIN/0240516230/citeulike-21},
+	Year = {2001},
+	Bdsk-Url-1 = {http://www.amazon.co.uk/exec/obidos/ASIN/0240516230/citeulike-21}}
 
 @book{Bayle:1993MusiqueAcousmatique,
 	Abstract = {{This book explains the positions and propositions of French electroacoustic composer and INA-GRM director Fran{\c c}ois Bayle about the acousmatic music he contributed to define.}},
