Adding another bunch of references
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4662 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-08 21:22:44 +0100 
+%% Created for lossius at 2009-02-08 21:30:22 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Lyon:2008spatial_orchestration,
+	Author = {Eric Lyon},
+	Booktitle = {Proceedings of the 5th Sound and Music Computing Conference},
+	Date-Added = {2009-02-08 21:30:19 +0100},
+	Date-Modified = {2009-02-08 21:30:19 +0100},
+	Keywords = {spatialisation},
+	Title = {Spatial Orchestration},
+	Year = {2008},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQIMAAAAAAIMAAIAAAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAA
+AADErH58SCsAAAALDScfTHlvbl8yMDA4c3BhdGlhbF9vcmMjNkVGRkMyLnBkZgAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG7/wsW0/QsAAAAAAAAAAAAFAAQAAAkgAAAAAAAAAAAAAA
+AAAAAAEF9iaWJkZXNrX2luZGV4ZWQAEAAIAADErGJcAAAAEQAIAADFtO77AAAAAQAUAAsNJwALD
+SUACuhPAAn6OQAAe1sAAgBeTWFjaW50b3NoIEhEOlVzZXJzOmxvc3NpdXM6RG9jdW1lbnRzOkFy
+dGlrbGVyOl9iaWJkZXNrX2luZGV4ZWQ6THlvbl8yMDA4c3BhdGlhbF9vcmMjNkVGRkMyLnBkZgA
+OAEYAIgBMAHkAbwBuAF8AMgAwADAAOABzAHAAYQB0AGkAYQBsAF8AbwByAGMAaABlAHMAdAByAG
+EAdABpAG8AbgAuAHAAZABmAA8AGgAMAE0AYQBjAGkAbgB0AG8AcwBoACAASABEABIAVFVzZXJzL
+2xvc3NpdXMvRG9jdW1lbnRzL0FydGlrbGVyL19iaWJkZXNrX2luZGV4ZWQvTHlvbl8yMDA4c3Bh
+dGlhbF9vcmNoZXN0cmF0aW9uLnBkZgATAAEvAAAVAAIADv//AADSHh8gIVgkY2xhc3Nlc1okY2x
+hc3NuYW1loyEiI11OU011dGFibGVEYXRhVk5TRGF0YVhOU09iamVjdF8QVS4uLy4uLy4uLy4uLy
+4uL0RvY3VtZW50cy9BcnRpa2xlci9fYmliZGVza19pbmRleGVkL0x5b25fMjAwOHNwYXRpYWxfb
+3JjaGVzdHJhdGlvbi5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIANwA6AD8A
+QQBTAFwAYgBpAHAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5AskCzgLXAuIC5gL0AvsDBAN
+cA2EDZAAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAANx}}
 
 @techreport{Prager:2002acousmatique,
 	Author = {Jonathan Prager},
