committing a first contribution to the ICMC DBAP article
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4663 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -206,26 +206,30 @@ The diffusion constant $r$ now can be understood as a displacement in the fourth
 
 
 
+\section{extending DBAP}
+
+\subsection{Spatial weights}
+
+The initial idea behind \textit{spatial weights} was to use the DBAP algorithm on different subsets of loudspeakers for different sources, in a global sound diffusion system. This idea is partly coming from the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique}, for which a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music\cite{Prager:2002acousmatique}. 
+Following this idea, the authors thought including such a loudspeaker-grouping system could be artistically promising, in order to create registers of loudspeakers as describe above, or to define specific 'sonic geographies' for different sources, by using different layers of loudspeakers for each of them, which allows a pre-defined spatial orchestration to be prepared in order to be later adapted to specific rooms\cite{Lyon:2008spatial_orchestration}. Another potential use of such loudspeakers layers could happen in installation or museum spaces, in order to diffuse sound sources both locally in one room, or all other the place.
+
+
+
+\subsection{Convex Hull}
+
+
+
+\section{Implementation}
+
+\subsection{Visual representation}
 
 
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% Introduction
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-
-
-
-
-
-
-
-
+\section{further development}
 
 
 
