Work on intro. Adding more references.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4664 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-08 21:30:22 +0100 
+%% Created for lossius at 2009-02-08 21:43:12 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{ITU:1993_surround_5:1,
+	Author = {ITU},
+	Date-Added = {2009-02-08 21:43:10 +0100},
+	Date-Modified = {2009-02-08 21:43:10 +0100},
+	Institution = {International Telecommunications Union},
+	Keywords = {spatialisation},
+	Title = {Recommendation BS. 775: Multi-channel stereophonic sound system with or without accompanying picture},
+	Year = {1993}}
 
 @inproceedings{Lyon:2008spatial_orchestration,
 	Author = {Eric Lyon},
