--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -113,7 +113,7 @@ about 150 words.
 
 \section{Introduction}\label{sec:introduction}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eros libero, rhoncus id, blandit et, condimentum malesuada, est. Morbi rhoncus, nisl id adipiscing varius, sapien pede elementum metus, faucibus eleifend magna felis sed augue. Morbi bibendum posuere quam. Suspendisse potenti. Nunc erat. Quisque eu leo. Aenean viverra, justo sed euismod interdum, nibh quam fringilla risus, vitae fermentum lectus turpis vitae lorem. Suspendisse auctor adipiscing risus. Nunc hendrerit eros. Phasellus sapien. Vestibulum nunc. Mauris feugiat diam nec est. Phasellus pretium augue. Nulla facilisi. Fusce eleifend. Donec nec mauris eu leo dictum interdum. 
+The use of multichannel and surround sound reproduction is getting ever more common, for consumer applications as well as musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers. A common assumption of techniques for spatialisation is that the position of the listener is known and fixed, and the speakers are surrounding him either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap} and ambisonics.
 
 
 
@@ -210,8 +210,9 @@ The diffusion constant $r$ now can be understood as a displacement in the fourth
 
 \subsection{Spatial weights}
 
-The initial idea behind \textit{spatial weights} was to use the DBAP algorithm on different subsets of loudspeakers for different sources, in a global sound diffusion system. This idea is partly coming from the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique}, for which a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music\cite{Prager:2002acousmatique}. 
-Following this idea, the authors thought including such a loudspeaker-grouping system could be artistically promising, in order to create registers of loudspeakers as describe above, or to define specific 'sonic geographies' for different sources, by using different layers of loudspeakers for each of them, which allows a pre-defined spatial orchestration to be prepared in order to be later adapted to specific rooms\cite{Lyon:2008spatial_orchestration}. Another potential use of such loudspeakers layers could happen in installation or museum spaces, in order to diffuse sound sources both locally in one room, or all other the place.
+The initial idea behind \textit{spatial weights} was to use the DBAP algorithm on different subsets of loudspeakers for different sources, in a global sound diffusion system. This idea is partly coming from the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique}, for which a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music\cite{Prager:2002acousmatique}.
+
+Following this idea, the authors thought including such a loudspeaker-grouping system could be artistically promising, in order to create registers of loudspeakers as describe above, or to define specific ``sonic geographies'' for different sources, by using different layers of loudspeakers for each of them, which allows a pre-defined spatial orchestration to be prepared in order to be later adapted to specific rooms\cite{Lyon:2008spatial_orchestration}. Another potential use of such loudspeakers layers could happen in installation or museum spaces, in order to diffuse sound sources both locally in one room, or all other the place.
 
 
 
