a bit more to the ICMC article
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4665 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -211,9 +211,10 @@ The diffusion constant $r$ now can be understood as a displacement in the fourth
 \subsection{Spatial weights}
 
 The initial idea behind \textit{spatial weights} was to use the DBAP algorithm on different subsets of loudspeakers for different sources, in a global sound diffusion system. This idea is partly coming from the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique}, for which a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music\cite{Prager:2002acousmatique}.
+Another requirement was to have the possibility to define the subsets of loudspeakers dynamically, and not only initially, so that they could be changed during the composition process, as well as during the performance of the music, which led the authors to define these subsets individually for each sound source as an array of n boolean values, indicating if each loudspeaker is part or not of the subset, n being the total number or loudspeakers.
+The possibility of interpolating between subsets of loudspeakers was also a desired feature, 
 
 Following this idea, the authors thought including such a loudspeaker-grouping system could be artistically promising, in order to create registers of loudspeakers as describe above, or to define specific ``sonic geographies'' for different sources, by using different layers of loudspeakers for each of them, which allows a pre-defined spatial orchestration to be prepared in order to be later adapted to specific rooms\cite{Lyon:2008spatial_orchestration}. Another potential use of such loudspeakers layers could happen in installation or museum spaces, in order to diffuse sound sources both locally in one room, or all other the place.
-
 
 
 \subsection{Convex Hull}
